test/bad/generators/generator02.px

func f(): Int... def
    yield 4.2

f()
